--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
 include brax/tests/testdata/cylinder.stl
 include brax/v2/envs/assets/*.xml
 recursive-include brax/v2/test_data *.xml *.stl *.obj
+include brax/v2/visualizer/ *.html *.ico
+include brax/v2/visualizer/js/*.js
