--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include brax/tests/testdata/cylinder.stl
 include brax/v2/envs/assets/*.xml
 recursive-include brax/v2/test_data *.xml *.stl *.obj
-recursive-include brax/v2/visualizer
+recursive-include brax/v2/visualizer *
