--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include brax/envs/assets/*.xml
-recursive-include brax/test_data *.xml *.stl *.obj
+recursive-include brax/test_data *.xml *.stl *.obj *.urdf
 recursive-include brax/visualizer *
