--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: ['3.9', '3.10']
     steps:
@@ -24,4 +25,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e .[develop]
       - name: Run tests
-        run: pytest
+        run: pytest -k 'not brax.v1'
