--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -34,8 +34,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
+          pip install uv
+          uv pip install --system -e ".[dev]"
+          uv pip install --system build twine
       - name: Build and publish
         env:
           TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
