--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,15 +32,10 @@ classifiers = [
 dependencies = [
     "absl-py",
     "dataclasses; python_version < '3.7'",
-    # TODO: remove dm_env after dropping legacy v1 code
-    "dm_env",
     "etils",
     "flask",
     "flask_cors",
     "flax",
-    # TODO: remove grpcio and gym after dropping legacy v1 code
-    "grpcio",
-    "gym",
     "jax>=0.4.6",
     "jaxlib>=0.4.6",
     "jaxopt",
@@ -51,9 +46,6 @@ dependencies = [
     "numpy",
     "optax",
     "orbax-checkpoint",
-    # TODO: remove pytinyrenderer after dropping legacy v1 code
-    "Pillow",
-    "pytinyrenderer",
     "scipy",
     "tensorboardX",
     "trimesh",
@@ -64,6 +56,10 @@ dependencies = [
 develop = [
     "pytest",
     "transforms3d",
+]
+wrappers = [
+  "gym",
+  "dm_env",
 ]
 
 [project.urls]
