feat: add new training scripts, plotting functions, and environment configurations for SafeBrax experiments
- Introduced `analyze_benchmark_results.py`, `download_wandb_data.py`, `simple_efficiency_benchmark.py`, and `train_from_config.py` for enhanced training and analysis capabilities.
- Added `thesis_plotting_functions.py` for generating thesis figures from W&B data.
- Implemented new environments: `SafePointGoal` and `SafePointGoalWeighted`, along with associated assets.
- Updated `.gitignore` to include project-specific artifacts and logs.
- Created multiple configuration files for various experimental setups, including safety trade-offs and performance benchmarks.
- Added new notebooks for training and analysis, including `mourad_lag_experiments.ipynb` and `thesis_plots.ipynb`.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,56 @@ __pycache__
 **/.venv/
 **/env_screenshots
 
+##### Project-specific experiment artifacts #####
+# Training artifacts
+/logs/
+/models/
+/runs/
+/trajectories/
+
+
+
+# Notebook outputs and metrics
+notebooks/metrics/
+notebooks/plots/
+notebooks/*.png
+notebooks/*_checkpoints/
+
+# Generated plots directory
+/plots/
+
+# Weights & Biases local data
+/wandb/
+/wandb_*/*
+
+# Deduped W&B exports
+/wandb_data_*/
+
+# Top-level run logs
+run_*.log
+run_*_log_*.txt
+
+# PID or sentinel files
+.pid_*
+.last_*_pid
+
+# Safety-gymnasium / external subprojects outputs
+Safe-Policy-Optimization/**/runs/
+Safe-Policy-Optimization/**/results/
+
+# Latex/Thesis derived files
+thesis/**/*.aux
+thesis/**/*.bbl
+thesis/**/*.blg
+thesis/**/*.fdb_latexmk
+thesis/**/*.fls
+thesis/**/*.log
+thesis/**/*.out
+thesis/**/*.synctex.gz
+thesis/**/*.toc
+samplemscthesis.*
+texput.log
+
 ####### UNITY STUFF
 
 */[Ll]ibrary/
